## This file is part of GNU m4
## Copyright (C) 2000, 2001 Free Software Foundation, Inc.
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
## 02110-1301  USA

EXTRA_DIST = $(WEB_SITE)

MAINTAINERCLEANFILES = Makefile.in

WEB_SITE = \
	WWW/Makefile \
	WWW/_footer.htm \
	WWW/_header.htm \
	WWW/man/Makefile \
	WWW/m4lib/bugs.m4 \
	WWW/m4lib/changelog.m4 \
	WWW/m4lib/download.m4 \
	WWW/m4lib/features.m4 \
	WWW/m4lib/feedback.m4 \
	WWW/m4lib/html.m4 \
	WWW/m4lib/index.m4 \
	WWW/m4lib/layout.m4 \
	WWW/m4lib/lists.m4 \
	WWW/m4lib/menu.m4 \
	WWW/m4lib/modules.m4 \
	WWW/m4lib/news.m4 \
	WWW/m4lib/readme.m4 \
	WWW/m4lib/setup.m4 \
	WWW/m4lib/test.m4 \
	WWW/m4lib/thanks.m4 \
	WWW/m4lib/thissite.m4 \
	WWW/m4lib/tmpl.m4 \
	WWW/m4lib/todo.m4 \
	WWW/m4lib/uses.m4 \
	WWW/m4lib/visions.m4 \
	WWW/m4lib/whatis.m4

dist_pkgdata_DATA = \
	capitalize.m4 \
	comments.m4 \
	ddivert.m4 \
	debug.m4 \
	esyscmd.m4 \
	exp.m4 \
	foreach.m4 \
	forloop.m4 \
	fstab.m4 \
	hanoi.m4 \
	incl-test.m4 \
	include.m4 \
	indir.m4 \
	misc.m4 \
	multiquotes.m4 \
	patsubst.m4 \
	pushpop.m4 \
	regexp.m4 \
	reverse.m4 \
	sysv-args.m4 \
	trace.m4 \
	translit.m4 \
	undivert.incl \
	undivert.m4 \
	wrap.m4
