## Process this file with automake to produce Makefile.in
noinst_LIBRARIES = libm4.a

libm4_a_SOURCES = getopt.h obstack.h regex.h regex.c getopt.c \
	getopt1.c error.c obstack.c xmalloc.c \
	xstrdup.c alloca.c strtol.c

noinst_HEADERS = getopt.h error.h getdate.h

libm4_a_LIBADD = 
libm4_a_DEPENDENCIES = # $(libfu_a_LIBADD)

